@@ -1,4 +1,4 @@
-.wrap {
+.gravityflow_wrap {
     position: static !important;
 }
 
